# mc-webooks

./: README.md  pyproject.toml
src/mc_webhooks/: config.py  event.py  event_handler.py
src/mc_webhooks/events/: __init__.py  player_chat.py  player_command.py  registry.py  server_start_stop.py
